[gd_scene load_steps=11 format=3 uid="uid://fjajq7h40klh"]

[ext_resource type="Script" path="res://scenes/characters/enemies/wandering.gd" id="1_orwgw"]
[ext_resource type="Texture2D" uid="uid://wdr05fc4c87a" path="res://tiles/ghost.png" id="1_yh46k"]
[ext_resource type="Script" path="res://scripts/health.gd" id="2_i24do"]
[ext_resource type="PackedScene" uid="uid://dlwr6fh761ep3" path="res://scenes/utils/HealthBar.tscn" id="3_r8yc8"]
[ext_resource type="Script" path="res://scripts/hurtbox.gd" id="4_wbxmc"]
[ext_resource type="Script" path="res://scripts/hitbox.gd" id="6_rmxn7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_aa6jp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_yh46k")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"hurt",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rv76p"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tmlut"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hka6q"]
radius = 4.0

[node name="Ghost" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_orwgw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_aa6jp")
animation = &"hurt"
frame_progress = 0.226635

[node name="Health" type="Node" parent="CharacterBody2D"]
script = ExtResource("2_i24do")
health = 50
current_max_health = 50

[node name="HealthBar" parent="CharacterBody2D" instance=ExtResource("3_r8yc8")]

[node name="HurtTimer" type="Timer" parent="CharacterBody2D"]

[node name="WaitingTimer" type="Timer" parent="CharacterBody2D"]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CircleShape2D_rv76p")

[node name="HitBox" type="Area2D" parent="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("6_rmxn7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/HitBox"]
shape = SubResource("CircleShape2D_tmlut")

[node name="HurtBox" type="Area2D" parent="CharacterBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("4_wbxmc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/HurtBox"]
shape = SubResource("CircleShape2D_hka6q")
debug_color = Color(0.780392, 0.368627, 0.6, 0.419608)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="CharacterBody2D"]

[connection signal="change_health" from="CharacterBody2D/Health" to="CharacterBody2D/HealthBar" method="_on_health_change_health"]
[connection signal="damaged" from="CharacterBody2D/Health" to="CharacterBody2D" method="_on_health_damaged"]
[connection signal="death" from="CharacterBody2D/Health" to="CharacterBody2D" method="_on_health_death"]
